k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32284
