k8s/ui-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: default
  labels:
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/component: service
    app.kubernetes.io/owner: retail-store-sample
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/component: service
    app.kubernetes.io/owner: retail-store-sample
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
